Adicionado nome do arquivo no argumento do comando deletar.